# DOCKER_TASK

./: README.md  docker-compose.yml  example.env
app/: Dockerfile  pyproject.toml  tasks.py
app/src/app/: __init__.py  models.py  routes.py
app/src/app/migrations/versions/: 2c20a9f3dae4_.py
app/src/app/templates/: index.html
nginx/: Dockerfile  default.conf  nginx.conf
static/: main.css
