[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ablacon R&D <dev@ablacon.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
invoke = "^1.5.0"
Flask-Migrate = "^2.7.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
